deploy/kubernetes/logs-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-service-deployment
  labels:
    app: logs-service
spec:
  selector:
    matchLabels:
      app: logs-service
  template:
    metadata:
      name: logs-service
      labels:
        app: logs-service
        rabbitmq-consumer: "true"
    spec:
      containers:
        - name: logs-service
          image: logs-service:local
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /app/logs
              name: logs-volume
      volumes:
        - name: logs-volume
          hostPath:
            path: /data/logs
