deploy/kubernetes/project-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service-deployment
  labels:
    app: project-service
spec:
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      name: project-service
      labels:
        app: project-service
        rabbitmq-producer: "true"
    spec:
      containers:
        - name: project-service
          image: project-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
