deploy/kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service
          ports:
            - containerPort: 8080
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-service-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: postgres
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
    - to:
        - podSelector:
            matchLabels:
              app: api-gateway
